--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "rc-form": "^2.1.7",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "tinper-bee": "^1.3.7"
+    "tinper-bee": "^1.3.7",
+    "yyuap-ref": "^1.0.27"
   }
 }
