修改项目结构 通过mirrox实现

--- a/.ubarc
+++ b/.ubarc
@@ -27,6 +27,9 @@
     "GET": [
       {
         "/nc/api/user": "./mock/nc/api/user.json"
+      },
+      {
+        "/test/getData":"./mock/test/list.json"
       }
     ],
     "POST": [
