--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bee-form": "^2.0.0",
     "classnames": "^2.2.5",
     "mirrorx": "^0.2.10",
     "moment": "^2.21.0",
@@ -27,6 +28,6 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "tinper-bee": "^1.3.7",
-    "yyuap-ref": "^1.0.27"
+    "yyuap-ref": "^1.0.41"
   }
 }
