--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bee-datepicker": "^1.0.22",
     "bee-form": "^2.0.0",
+    "bee-tooltip": "^1.0.2",
     "classnames": "^2.2.5",
     "mirrorx": "^0.2.10",
     "moment": "^2.21.0",
@@ -28,6 +30,6 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "tinper-bee": "^1.3.7",
-    "yyuap-ref": "^1.0.41"
+    "yyuap-ref": "^1.0.43"
   }
 }
