--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "axios": "^0.18.0",
     "bee-datepicker": "^1.0.22",
     "bee-form": "^2.0.0",
+    "bee-pagination": "^1.0.3",
+    "bee-search-panel": "^0.1.4",
     "bee-tooltip": "^1.0.2",
     "classnames": "^2.2.5",
     "mirrorx": "^0.2.10",
@@ -30,6 +32,6 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "tinper-bee": "^1.3.7",
-    "yyuap-ref": "^1.0.43"
+    "yyuap-ref": "^1.0.56"
   }
 }
